# py_maskinporten

./: .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  pyproject.toml  pytest.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build_and_release.yml  ci.yml  docker.yml  docs.yml  release-please.yml  update-citation-date-in-release-pr.yml
src/py_maskinporten/: __init__.py  app.py  config.py  request_token.py
src/pymaskinporten/: __init__.py  app.py  config.py  request_token.py
src/pymaskinporten/templates/: index.html
tests/: conftest.py  smoke_test.py
tests/integration/: test_maskinporten_exchange.py
tests/unit/: test_config_loading.py  test_jwt_builder.py  test_private_key_validation.py
