[project]
name = "py_maskinporten"
version = "0.10.3"
description = "Fetch Maskinporten Token"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Novica Nakov", email = "nnovica@gmail.com" }]

requires-python = ">=3.13"
dependencies = [
  "flask>=3.1.3",
  "httpx",
  "jwcrypto",
  "pyjwt",
  "python-dotenv>=1.2.2",
]

[project.scripts]
maskinporten-web = "py_maskinporten.app:main"
py_maskinporten = "py_maskinporten:main"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.1",
  "ty>=0.0.19",
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
