[project]
name = "pymaskinporten"
version = "0.11.0"
description = "Fetch Maskinporten Token"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Novica Nakov", email = "nnovica@gmail.com" }]

requires-python = ">=3.13"
dependencies = [
  "flask>=3.1.3",
  "httpx",
  "jwcrypto",
  "pydantic>=2.12.5",
  "pyjwt",
  "python-dotenv>=1.2.2",
]

[project.scripts]
maskinporten_web = "pymaskinporten.app:main"
pymaskinporten = "pymaskinporten:main"

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.1",
  "ty>=0.0.21",
]

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
